@@ -44,6 +44,8 @@ class MS_Gateway extends MS_Model_Option {
 	const MODE_SANDBOX = 'sandbox';
 	const MODE_LIVE    = 'live';
 
+	const ID = 'admin';
+
 	/**
 	 * Singleton object.
 	 *
@@ -270,7 +272,7 @@ class MS_Gateway extends MS_Model_Option {
 		);
 
 		$invoice = $subscription->get_current_invoice();
-		$invoice->gateway_id = $this->id;
+		$invoice->gateway_id = self::ID;
 		$invoice->save();
 
 		// The default handler only processes free subscriptions.
