@@ -432,6 +432,13 @@ class MS_Controller_Billing extends MS_Controller {
 			$member = MS_Factory::load( 'MS_Model_Member', $fields['user_id'] );
 			$membership_id = $fields['membership_id'];
 			$gateway_id = 'admin';
+			
+			//Get all gateways that are active.
+			//If its only one, set that as the default gateway
+			$gateway_names = MS_Model_Gateway::get_gateway_names( true );
+			if ( count ( $gateway_names ) == 1 ) {
+				$gateway_id = key( $gateway_names );
+			}
 
 			$subscription = MS_Model_Relationship::get_subscription(
 				$member->id,
