@@ -606,8 +606,6 @@ class MS_Gateway_Paypalstandard extends MS_Gateway {
 				if ( ! empty( $notes_pay ) ) { $invoice->add_notes( $notes_pay ); }
 				if ( ! empty( $notes_txn ) ) { $invoice->add_notes( $notes_txn ); }
 
-				$invoice->save();
-
 				if ( $success ) {
 					$invoice->pay_it( self::ID, $external_id );
 				} elseif ( ! empty( $status ) ) {
@@ -615,6 +613,8 @@ class MS_Gateway_Paypalstandard extends MS_Gateway {
 					$invoice->save();
 					$invoice->changed();
 				}
+
+				$invoice->save();
 
 				do_action(
 					'ms_gateway_paypalstandard_payment_processed_' . $status,
@@ -658,6 +658,8 @@ class MS_Gateway_Paypalstandard extends MS_Gateway {
 				$notes = 'Response Error: ' . $reason;
 				$exit = true;
 			}
+			$invoice->gateway_id = self::ID;
+			$invoice->save();
 		} else {
 			// Did not find expected POST variables. Possible access attempt from a non PayPal site.
 
