@@ -2249,6 +2249,14 @@ class MS_Model_Relationship extends MS_Model_CustomPostType {
 		// Do not set subscription to "No Gateway".
 		if ( ! $new_gateway ) { return; }
 
+		//Incase the gateway is admin, we need to st it to the default active gateway
+		if ( $new_gateway == 'admin' ) {
+			$gateway_names = MS_Model_Gateway::get_gateway_names( true );
+			if ( count ( $gateway_names ) == 1 ) {
+				$new_gateway = key( $gateway_names );
+			}
+		}
+
 		// No change needed. Skip.
 		if ( $new_gateway == $old_gateway ) { return; }
 
