@@ -444,14 +444,14 @@ class MS_Model_Settings extends MS_Model_Option {
 	* @param MS_Model_Membership $membership
 	* 
 	* @return bool
-	*
-	public function membership_has_protection_type( $type, $membership ){
-
-		if( ! $type || ! $membership ) return false;
-
-		return isset( $this->protection_messages[ $type . '_' . $membership->id ] );
-
-	}*/
+	*/
+	//public function membership_has_protection_type( $type, $membership ){
+	//
+	//	if( ! $type || ! $membership ) return false;
+	//
+	//	return isset( $this->protection_messages[ $type . '_' . $membership->id ] );
+	//
+	//}
 
 	/**
 	 * Set specific property.
